REGRESSION(296858@main?): Build fails with ENABLE_JOURNALD_LOG=OFF due to static assert in logging macros https://bugs.webkit.org/show_bug.cgi?id=296043

Reviewed by Miguel Gomez.

Revert usage of SAFE_FPRINTF() to plain fprintf() in logging functions
in order to avoid differences in interpretation of format string
parameters among stderr logging, Android logging, and journald logging.

* Source/WTF/wtf/Assertions.h:
* Source/WTF/wtf/Logger.h:
(WTF::Logger::log):
(WTF::Logger::logVerbose):

Canonical link: https://commits.webkit.org/298228@main